--- a/templates/base.html
+++ b/templates/base.html
@@ -12,15 +12,15 @@
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
   <h5 class="my-0 mr-md-auto font-weight-normal">iTech</h5>
   <nav class="my-2 my-md-0 mr-md-3">
-      <a class="p-2 text-dark" href="/">Главная</a>
       <a class="p-2 text-dark" href="/search">Поиск</a>
       <a class="p-2 text-dark" href="/catalog">Каталог</a>
       <a class="p-2 text-dark" href="/report">Почта</a>
       <a class="p-2 text-dark" href="/cart">Корзина</a>
+      <a class="p-2 text-dark" href="/orders">Заказы</a>
       <!-- <a class="p-2 text-dark" href="/engine">Обновление</a> -->
 
   </nav>
-  <a class="btn btn-outline-primary" href="/orders">Заказы</a>
+  <a class="btn btn-outline-primary" href="/logout">Выйти</a>
 </div>
     <div class="container">
 {% block body %}
