--- a/templates/index.html
+++ b/templates/index.html
@@ -1,33 +1,29 @@
-{% extends 'base.html' %}
+<!doctype html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <title>Добро пожаловать</title>
+</head>
+<body>
+    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+  <h5 class="my-0 mr-md-auto font-weight-normal">iTech</h5>
+  <nav class="my-2 my-md-0 mr-md-3">
+      <a class="p-2 text-dark" href="/registr">Регистрация</a>
+  </nav>
+  <a class="btn btn-outline-primary" href="/login">Войти</a>
 
 
-{% block title %}Агрегатор{% endblock %}
-
-
-{% block body %}
-    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <h1 class="display-4">Pricing</h1>
-  <p class="lead">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>
 </div>
 
-<div class="container">
-<div class="card-deck mb-3 text-center">
-    {% for el in data %}
-    <div class="card mb-4 shadow-sm">
-      <div class="card-header">
-        <h4 class="my-0 font-weight-normal">{{ el.title.split(',')[0] }}</h4>
-      </div>
-      <div class="card-body">
-        <h3 class="card-title pricing-card-title">{{ el.price }} руб</h3>
-        <ul class="list-unstyled mt-3 mb-4">
-            <li><b>{{ el.title }}</b></li>
-            <li>Гарантия: {{ el.guarant }} мес.</li>
-            <li>Поступление на склад: {{ el.delivery }}</li>
-        </ul>
-        <a href="https://novosibirskshop.e2e4online.ru/shop/catalog/#/search={{ el.article }}" class="btn btn-lg btn-block btn-outline-primary" target="_blank">E2E4</a>
-      </div>
+    <div class="container">
+        <h1>Добро пожаловать!</h1>
+        <h4>Для работы в агрегаторе, Вам необходимо авторизоваться!</h4>
     </div>
-    {% endfor %}
+
 </div>
-</div>
-{% endblock %}
+
+</body>
